<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pimwimon.applicationforhealthy.Note1Activity">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="385dp"
        android:layout_height="51dp"

        android:background="#4d5568"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/note2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.047"
        android:contentDescription="@string/Icon_height"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.432" />


    <Button
        android:id="@+id/btn_next_note2"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:text="@string/btn_next_note2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.275" />


    <Button
        android:id="@+id/btn_edit"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:text="@string/btn_edit"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.195"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_note2" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:text="@string/btn_delete"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:background="@drawable/btnback"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintVertical_bias="0.974" />


</android.support.constraint.ConstraintLayout>
