<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pimwimon.applicationforhealthy.Note2Activity">
    <TextView
        android:id="@+id/textView8"
        android:layout_width="385dp"
        android:layout_height="51dp"

        android:background="#4d5568"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/note2"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintVertical_bias="0.127"
        android:contentDescription="@string/Icon_height"
        tools:ignore="UnknownId,UnknownIdInLayout" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.423" />

    <EditText
        android:id="@+id/E_title"
        android:layout_width="249dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintVertical_bias="0.476"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/E_description"
        android:layout_width="260dp"
        android:layout_height="115dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="108dp"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="LabelFor,UnknownIdInLayout" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:layout_marginLeft="0dp"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/E_description"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.344"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:hint="@string/btn_con"
        android:background="#4d5568"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="312dp"
        android:layout_height="27dp"
        android:text="@string/SH_datetime"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#000"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/S_datetime"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/S_datetime"
        android:layout_width="282dp"
        android:layout_height="24dp"
        android:text="@string/S_datetime"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.184" />
    <Button
        android:id="@+id/btn_datePicker"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:text="@string/btn_date"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.243"
        app:layout_constraintHorizontal_bias="0.198" />

    <Button
        android:id="@+id/btn_timePicker"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:text="@string/btn_time"
        android:layout_marginTop="152dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next_note2"
        tools:ignore="UnknownIdInLayout"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_round"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:text=""
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.429" />

</android.support.constraint.ConstraintLayout>
