<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pimwimon.applicationforhealthy.IndexActivity"
    android:background="@drawable/pageindex"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="29dp"
        android:layout_height="31dp"
        app:srcCompat="@drawable/wigth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintVertical_bias="0.712"
        android:contentDescription="@string/Icon_wigth" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="232dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="#323232"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.909"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wight"
        android:textColor="#323232"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintVertical_bias="0.725"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/height"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintVertical_bias="0.967"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/Icon_height" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText3"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText3"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.777"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="97dp"
        android:layout_height="34dp"
        android:text="@string/nature"
        android:textColor="#323232"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintVertical_bias="0.861"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/S_nature"
        android:layout_width="232dp"
        android:layout_height="34dp"
        android:spinnerMode="dropdown"
        android:entries="@array/nature_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/txt_next"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:hint="@string/next"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.953"
        tools:ignore="UnknownId,UnknownIdInLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/S_nature"
        app:layout_constraintVertical_bias="0.935" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="29dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/cake"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.829"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintRight_toLeftOf="@+id/textView23"
        android:contentDescription=""
        tools:ignore="ContentDescription" />





    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="#323232"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        tools:ignore="HardcodedText,RtlHardcoded"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.133" />

    <Button
        android:id="@+id/btn_birthday"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:text="บันทึกวันเกิด"
        android:textColor="@color/white"
        android:background="#3f51b5"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView23"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintVertical_bias="0.995"
        tools:ignore="HardcodedText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="27dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/intersex"
        tools:ignore="ContentDescription,MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="43dp"
        android:layout_height="26dp"
        android:text="เพศ"
        android:textColor="#323232"
        android:textSize="18sp"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintVertical_bias="0.339"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="217dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_birthday"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintLeft_toRightOf="@+id/textView24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="ชาย"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="หญิง"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_TextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintVertical_bias="0.41"
        tools:ignore="HardcodedText" />

</android.support.constraint.ConstraintLayout>
